# ijepath

./: .gitignore  Dockerfile  Dockerfile.ci  MANIFEST.in  README.md  main.py  main_distributed.py  pyproject.toml  pytest.ini  requirements.in
configs/: __init__.py  defaults.yaml  pathology_sampling_profile_ctx1p0_tgt0p5.yaml  pathology_tcga_prad_resampled2x_smoke.yaml  tcga_prad_resampled2x_smoke.yaml
docs/: ci-workflows.md
ijepath/: __init__.py  config_loading.py  config_logging.py  helper.py  output_runtime.py  train.py  train_cross_resolution_jepa.py
notebooks/: render_stagec_preview.py  stagec_plot_utils.py
scripts/: benchmark_data_pipeline.py  build_anchor_catalog.py  build_slide_index.py  build_slide_metadata_index_from_manifest.py  build_valid_context_anchor_catalog.py  preview_context_targets.py  verify_pathology_training_runtime.py  verify_training_runtime.py
src/: train.py  train_cross_resolution_jepa.py  train_pathology_cross_resolution_jepa.py
tasks/: add-github-release-workflows.md  convert-src-imports-to-ijepath-plan.md  lessons.md  package-default-configs-plan.md
tests/: test_anchor_pass_budget_logging.py  test_camelyon_splits.py  test_checkpoint_image_naming.py  test_config_loading.py  test_config_no_samples_per_chunk.py  test_config_stdout_logging.py  test_context_target_mask_non_leakage.py  test_cross_resolution_dataset_shapes.py  test_dataset_edge_cases.py  test_distributed_init.py  test_encoder_input_size_contract.py  test_image_budget_schedule.py  test_images_seen_primary_wandb_axis.py  test_log_utils.py  test_logging_cleanup_behavior.py  (+28 more)
(+53 files in other folders)
